--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>freelankarx - Olamilekan Muraina</title>
-  <!-- Updated Favicon -->
+  <!-- Meta description with a compelling offer -->
+  <meta name="description" content="FreelankarX - Your Digital Growth Partner. Unlock unmatched Shopify, eCommerce, and Digital Marketing strategies with a proven track record. Experience an offer so compelling, it's hard to ignore, and watch your business soar." />
+  <title>FreelankarX - Olamilekan Muraina</title>
+  <!-- Favicon -->  
   <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/freelankarx%20logo.png" type="image/png">
   <link rel="stylesheet" href="styles.css">
-  <!-- Font Awesome for icons -->
+  <!-- Font Awesome for icons -->  
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <!-- Klaviyo (if needed) -->
-  <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM"></script>
-  <!-- Firebase and Cloudinary scripts (using Firebase v9 compat) -->
+  <!-- Klaviyo (if needed) -->  
+  <script async src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM"></script>
+  <!-- Firebase and Cloudinary scripts (Firebase v9 compat) -->  
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
@@ -21,7 +23,10 @@
   <!-- Header Section with Video Banner -->
   <header>
     <nav>
-      <div class="logo">freelankarx</div>
+      <!-- Updated Logo Image -->  
+      <div class="logo">
+        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/73821dffc1925e56088fbaec02702042713ad955/freelankarx_logo-removebg-preview.png" alt="FreelankarX Logo">
+      </div>
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#services">Services</a></li>
@@ -54,8 +59,9 @@
     <section id="about" class="section">
       <h2>About Me</h2>
       <div class="about-content">
-        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/blob/7a8f5336e796c146ffa87394017af0177ad8dfa2/Olamilekan%20Muraina%20-%20freelankarx.png" alt="Olamilekan Muraina">
-        <div class="text">   
+        <!-- Updated About Me Image -->  
+        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/8ba172b6dfb5095dc1fb80fcc60d3749405e12c7/Olamilekan%20Muraina%20-%20freelankarx.png" alt="Olamilekan Muraina">
+        <div class="text">
           <p>
             I am Olamilekan Muraina, a seasoned Shopify expert, eCommerce specialist, and digital marketer.
             With over 7 years of experience and more than $14M in revenue generated, I empower brands to scale
@@ -92,9 +98,9 @@
       <h2>What Sets Me Apart</h2>
       <div class="was-content">
         <p>
-          Choosing the right expert can be overwhelming—but my unique, data-driven approach and commitment to innovation set me apart.
+          Choosing the right expert can be overwhelming—but my unique, data-driven approach and unwavering commitment to innovation set me apart.
           I deliver tailored strategies that yield measurable growth and ensure lasting success.
-          Trust in my expertise to transform your brand and drive remarkable results.
+          When you work with me, you gain a dedicated partner focused on transforming your brand and driving exceptional results.
         </p>
       </div>
     </section>
@@ -107,8 +113,16 @@
           <p>Increased average order value by <strong>35%</strong>.</p>
           <p>This is how I ensure amazing results for your business.</p>
         </div>
-        <div class="results-image">
-          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/result.png" alt="Proof of Results">
+        <div class="results-image-grid">
+          <div class="results-image">
+            <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/result.png" alt="Result 1">
+          </div>
+          <div class="results-image">
+            <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/8ba172b6dfb5095dc1fb80fcc60d3749405e12c7/result%20made%20by%20freelankarx..png" alt="Result 2">
+          </div>
+          <div class="results-image">
+            <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/8ba172b6dfb5095dc1fb80fcc60d3749405e12c7/result%20made%20by%20freelankarx.png" alt="Result 3">
+          </div>
         </div>
       </div>
     </section>
@@ -145,13 +159,13 @@
       <h2>My Work</h2>
       <div class="portfolio-grid">
         <div class="portfolio-item">
-          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%201%20image" alt="Project 1">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%201%20image" alt="Project 1" loading="lazy">
         </div>
         <div class="portfolio-item">
-          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%202%20image" alt="Project 2">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%202%20image" alt="Project 2" loading="lazy">
         </div>
         <div class="portfolio-item">
-          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%203%20image" alt="Project 3">
+          <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/project%203%20image" alt="Project 3" loading="lazy">
         </div>
       </div>
     </section>
