--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Meta description with a compelling offer -->
+  <!-- Meta description with compelling offer -->
   <meta name="description" content="FreelankarX - Your Digital Growth Partner. Unlock unmatched Shopify, eCommerce, and Digital Marketing strategies with a proven track record. Experience an offer so compelling, it's hard to ignore, and watch your business soar." />
   <title>FreelankarX - Olamilekan Muraina</title>
   <!-- Favicon -->  
   <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/freelankarx%20logo.png" type="image/png">
   <link rel="stylesheet" href="styles.css">
-  <!-- Font Awesome for icons -->  
+  <!-- Font Awesome for icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <!-- Klaviyo (if needed) -->  
+  <!-- Klaviyo (if needed) -->
   <script async src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM"></script>
-  <!-- Firebase and Cloudinary scripts (Firebase v9 compat) -->  
+  <!-- Firebase and Cloudinary scripts (Firebase v9 compat) -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
@@ -23,7 +23,7 @@
   <!-- Header Section with Video Banner -->
   <header>
     <nav>
-      <!-- Updated Logo Image -->  
+      <!-- Updated Logo Image -->
       <div class="logo">
         <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/73821dffc1925e56088fbaec02702042713ad955/freelankarx_logo-removebg-preview.png" alt="FreelankarX Logo">
       </div>
@@ -59,7 +59,7 @@
     <section id="about" class="section">
       <h2>About Me</h2>
       <div class="about-content">
-        <!-- Updated About Me Image -->  
+        <!-- Updated About Me Image -->
         <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/8ba172b6dfb5095dc1fb80fcc60d3749405e12c7/Olamilekan%20Muraina%20-%20freelankarx.png" alt="Olamilekan Muraina">
         <div class="text">
           <p>
