--- a/index.html
+++ b/index.html
@@ -106,27 +106,27 @@
     </section>
 
     <!-- Explore Recent Results for Clients Section -->
-    <section id="recent-results" class="section">
-      <h2>Explore Recent Results for Clients</h2>
-      <div class="results-content">
-        <div class="results-text">
-          <p>Increased average order value by <strong>35%</strong>.</p>
-          <p>This is how I ensure amazing results for your business.</p>
-        </div>
-        <div class="results-image-grid">
-          <div class="results-image">
-            <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/result.png" alt="Result 1">
-          </div>
-          <div class="results-image">
-            <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/8ba172b6dfb5095dc1fb80fcc60d3749405e12c7/result%20made%20by%20freelankarx..png" alt="Result 2">
-          </div>
-          <div class="results-image">
-            <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/8ba172b6dfb5095dc1fb80fcc60d3749405e12c7/result%20made%20by%20freelankarx.png" alt="Result 3">
-          </div>
-        </div>
+<section id="recent-results" class="section">
+  <h2>Explore Recent Results for Clients</h2>
+  <div class="results-content">
+    <div class="results-text">
+      <p>Increased average order value by <strong>35%</strong>.</p>
+      <p>This is how I ensure amazing results for your business.</p>
+    </div>
+    <div class="results-image-grid">
+      <div class="results-image">
+        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/290c088d23ff23a78f67db0366b9c0de38206d86/result.png" alt="Result 1">
       </div>
-    </section>
-
+      <div class="results-image">
+        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/8ba172b6dfb5095dc1fb80fcc60d3749405e12c7/result%20made%20by%20freelankarx..png" alt="Result 2">
+      </div>
+      <div class="results-image">
+        <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/8ba172b6dfb5095dc1fb80fcc60d3749405e12c7/result%20made%20by%20freelankarx.png" alt="Result 3">
+      </div>
+    </div>
+  </div>
+</section>
+    
     <!-- Process Section (How I Work) -->
     <section id="process" class="section">
       <h2>How I Work</h2>
@@ -290,6 +290,12 @@
   <footer>
     <p>&copy; 2024 freelankarx. All rights reserved.</p>
   </footer>
+  
+  <!-- Portfolio Modal for Image Preview -->
+<div id="portfolioModal">
+  <span id="closeModal" class="close-modal">&times;</span>
+  <img id="modalImage" src="" alt="Portfolio Preview">
+</div>
 
   <script src="script.js"></script>
 </body>
