--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Meta description with compelling offer -->
-  <meta name="description" content="FreelankarX - Your Digital Growth Partner. Unlock unmatched Shopify, eCommerce, and Digital Marketing strategies with a proven track record. Experience an offer so compelling, it's hard to ignore, and watch your business soar." />
+  <meta name="description" content="Need a Shopify expert who actually gets results? I’m Olamilekan Muraina, and I’ve helped businesses generate over $14M+ in revenue with high-converting Shopify stores, powerful TikTok & Facebook ads, and automated email marketing. No fluff just real strategies that grow your brand fast. Let’s build something amazing together!" />
   <title>FreelankarX - Olamilekan Muraina</title>
   <!-- Favicon -->  
   <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/freelankarx%20logo.png" type="image/png">
