--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Meta description with compelling offer -->
-  <meta name="description" content="Need a Shopify expert who actually gets results? I’m Olamilekan Muraina, and I’ve helped businesses generate over $14M+ in revenue with high-converting Shopify stores, powerful TikTok & Facebook ads, and automated email marketing. No fluff just real strategies that grow your brand fast. Let’s build something amazing together!" />
+  <meta name="description" content="Freelankarx – Your trusted Shopify expert for real results. I'm Olamilekan Muraina, and I’ve helped businesses generate over $14M+ in revenue with high-converting Shopify stores, powerful TikTok & Facebook ads, and automated email marketing. No fluff just proven strategies to scale your brand fast. Let’s build something amazing today!" />
   <title>FreelankarX - Olamilekan Muraina</title>
   <!-- Favicon -->  
   <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/freelankarx%20logo.png" type="image/png">
