--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
+script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Olamilekan Muraina",
+  "jobTitle": "Shopify Expert & Digital Marketer",
+  "url": "https://freelankarx.github.io/Freelankarx/",
+  "sameAs": [
+    "https://www.linkedin.com/in/muraina-olamilekan-a09543298/",
+    "https://www.instagram.com/freelankarxx",
+    "https://www.facebook.com/freelankarx0", "https://www.tiktok.com/@freelankarx"
+  ]
+}
+</script>
 </head>
 <body>
   <!-- Header Section with Video Banner -->
