--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Person",
-  "name": "Olamilekan Muraina",
+  "name": "Olamilekan Muraina"
+  "brand name": "freelankarx,
   "jobTitle": "Shopify Expert & Digital Marketer",
   "url": "https://freelankarx.github.io/Freelankarx/",
   "sameAs": [
