--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
-script type="application/ld+json">
+
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Person",
@@ -32,9 +33,8 @@ script type="application/ld+json">
   "sameAs": [
     "https://www.linkedin.com/in/muraina-olamilekan-a09543298/",
     "https://www.instagram.com/freelankarxx",
-    "https://www.facebook.com/freelankarx0", "https://www.tiktok.com/@freelankarx"
-  ]
-}
+    "https://www.facebook.com/freelankarx0", "https://www.tiktok.com/@freelankarx" />
+
 </script>
 </head>
 <body>
