--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       <div class="overlay"></div>
       <div class="hero-content">
         <h1>Your Digital Growth Partner</h1>
-        <p>Expert in Shopify, eCommerce, and Digital Marketing</p>
-        <a href="#contact" class="btn">Get in Touch</a>
+        <p>Whether you need a <b>winning product, optimized store, or high-converting TikTok & Facebook ads</b>—I’m here to help.</p>
+<a href="#contact" class="btn">Book a Free Consultation</a>
       </div>
     </section>
   </header>
@@ -317,4 +317,4 @@
 
   <script src="script.js"></script>
 </body>
-</html>
+</html>
