--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       <div class="overlay"></div>
       <div class="hero-content">
         <h1>Your Digital Growth Partner</h1>
-        <p>Whether you need a <b>winning product, optimized store, or high-converting TikTok & Facebook ads</b>—I’m here to help.</p>
+        <p>Whether you need a winning product, optimized store, or high-converting TikTok & Facebook ads I’m here to help.</p>
+
 <a href="#contact" class="btn">Book a Free Consultation</a>
       </div>
     </section>
