--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Meta description with compelling offer -->
   <meta name="description" content="Freelankarx – Your trusted Shopify expert for real results. I'm Olamilekan Muraina, and I’ve helped businesses generate over $14M+ in revenue with high-converting Shopify stores, powerful TikTok & Facebook ads, and automated email marketing. No fluff just proven strategies to scale your brand fast. Let’s build something amazing today!" />
-<meta name="keywords" content="Shopify Expert, Dropshipping, TikTok Ads, Facebook Ads, eCommerce Marketing, Email Automation, Digital Marketing" />
+<meta name="keywords" content="Shopify Expert, Dropshipping, TikTok Ads, Facebook Ads, eCommerce Marketing, freelancer, Shopify Marketing Expert, professional digital marketer, best freelancer, best Shopify expert, best email . marketing expert, best fiverr freelancer, freelankarx, olamilekan Muraina, Muraina olamilekan, how to get sales, sales expert, dropshipping expert, ecommerce expert, Shopify sales expert, Shopify partner, klaviyo, making money online,scale brand, side hustle Expert, .Email Automation, Digital Marketing" />
 <meta name="author" content="Olamilekan Muraina" />
   <title>FreelankarX - Olamilekan Muraina</title>
   <!-- Favicon -->  
