--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="overlay"></div>
       <div class="hero-content">
         <h1>Your Digital Growth Partner</h1>
-        <p>Whether you need a winning product, optimized store, or high-converting TikTok & Facebook ads I’m here to help.</p>
+        <p>Expert in Shopify, eCommerce, and Digital Marketing.</p>
 
 <a href="#contact" class="btn">Book a Free Consultation</a>
       </div>
