--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
         <a href="https://www.linkedin.com/in/muraina-olamilekan-a09543298/" class="social-link" target="_blank">
           <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/linkedin.png" alt="LinkedIn">
         </a>
-        <a href="https://www.instagram.com/freelankarx?igsh=MXV5N3l5ZHp5eWpkMQ==" class="social-link" target="_blank">
+        <a href="https://www.instagram.com/freelankarxx?igsh=MXV5N3l5ZHp5eWpkMQ==" class="social-link" target="_blank">
           <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/instagram.png" alt="Instagram">
         </a>
-        <a href="https://www.facebook.com/freelankarx" class="social-link" target="_blank">
+        <a href="https://www.facebook.com/freelankarx0" class="social-link" target="_blank">
           <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/facebook-icon-lg.png" alt="Facebook">
         </a>
       </div>
