--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://Freelankarx.brandwithfahd.xyz/css/main.css">
   <!-- Meta description with compelling offer -->
   <meta name="description" content="Freelankarx – Your trusted Shopify expert for real results. I'm Olamilekan Muraina, and I’ve helped businesses generate over $14M+ in revenue with high-converting Shopify stores, powerful TikTok & Facebook ads, and automated email marketing. No fluff just proven strategies to scale your brand fast. Let’s build something amazing today!" />
 <meta name="keywords" content="Shopify Expert, Dropshipping, TikTok Ads, Facebook Ads, eCommerce Marketing, freelancer, Shopify Marketing Expert, professional digital marketer, best freelancer, best Shopify expert, best email . marketing expert, best fiverr freelancer, freelankarx, olamilekan Muraina, Muraina olamilekan, how to get sales, sales expert, dropshipping expert, ecommerce expert, Shopify sales expert, Shopify partner, klaviyo, making money online,scale brand, side hustle Expert, .Email Automation, Digital Marketing, Shopify expert, eCommerce, dropshipping, digital marketing, TikTok ads, Facebook ads, Shopify automation, high-converting store, passive income" />
@@ -79,7 +80,8 @@
     <section id="about" class="section">
       <h2>About Me</h2>
       <div class="about-content">
-        <!-- Updated About Me Image -->
+        <!-- Updated About Me Image -->
+
         <div class="text">
           <p>
             I am Olamilekan Muraina, a seasoned Shopify expert, eCommerce specialist, and digital marketer.
@@ -318,4 +320,4 @@
 
   <script src="script.js"></script>
 </body>
-</html>
+</html>
