--- a/index.html
+++ b/index.html
@@ -244,6 +244,26 @@
       </div>
     </section>
 
+    <!-- Blog Section -->
+    <section id="blog">
+        <h2>Latest Blog Posts</h2>
+        <div class="blog-posts">
+            <!-- Example of Blog Post Links -->
+            <article>
+                <h3><a href="https://blog.freelankarx.com/first-blog-post-url" target="_blank">How to Set Up Your Shopify Store</a></h3>
+                <p>Learn how to set up a successful Shopify store from scratch with this step-by-step guide.</p>
+            </article>
+            <article>
+                <h3><a href="https://blog.freelankarx.com/second-blog-post-url" target="_blank">Top Tips for Dropshipping Success</a></h3>
+                <p>Discover essential tips to succeed in the dropshipping business and boost your sales.</p>
+            </article>
+            <article>
+                <h3><a href="https://blog.freelankarx.com/third-blog-post-url" target="_blank">Maximizing Your Shopify Experience</a></h3>
+                <p>Make the most out of your Shopify store with these advanced tips and tools.</p>
+            </article>
+        </div>
+    </section>
+    
     <!-- Testimonials & Reviews Section -->
     <section id="testimonials" class="section">
       <h2>Testimonials</h2>
