--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#faq">FAQ</a></li>
-        <li><a href="Blog">Blog</a></li>
+        <li><a href="#blog">Blog</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
