--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
     <!-- Blog Section -->
     <section id="blog">
         <h2>Latest Blog Posts</h2>
-        <div class="blog-posts">
-            <!-- Example of Blog Post Links -->
+        <div class="blog-section">
+    <!-- Blog content here -->
             <article>
                 <h3><a href="https://blog.freelankarx.com/first-blog-post-url" target="_blank">How to Set Up Your Shopify Store</a></h3>
                 <p>Learn how to set up a successful Shopify store from scratch with this step-by-step guide.</p>
