--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="text">
           <p>
             I am Olamilekan Muraina, a seasoned Shopify expert, eCommerce specialist, and digital marketer.
-            With over 7 years of experience and more than $14M in revenue generated, I empower brands to scale
+            With over 7 years of experience and 5-7 figures in revenue generated, I empower brands to scale
             effectively and reach new heights.
           </p>
         </div>
