--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Meta description with compelling offer -->
-  <meta name="description" content="Freelankarx – Your trusted Shopify expert for real results. I'm Olamilekan Muraina, and I’ve helped businesses generate over 5-7 figures in revenue with high-converting Shopify stores, powerful TikTok & Facebook ads, and automated email marketing. No fluff just proven strategies to scale your brand fast. Let’s build something amazing today!" />
-<meta name="keywords" content="Shopify Expert, How To Make Money Online, How to make money online in 2025, How to start dropshipping in 2025, How to become rich quick in 2025, Best shopify specialist, Trusted dropshipping expert, best shopify expert, entrepreneur, Dropshipping, TikTok Ads, Facebook Ads, eCommerce Marketing, freelancer, Shopify Marketing Expert, professional digital marketer, best freelancer, best Shopify expert, best email . marketing expert, best fiverr freelancer, freelankarx, olamilekan Muraina, Muraina olamilekan, how to get sales, sales expert, dropshipping expert, ecommerce expert, Shopify sales expert, Shopify partner, klaviyo, making money online,scale brand, side hustle Expert, .Email Automation, Digital Marketing, Shopify expert, eCommerce, dropshipping, digital marketing, TikTok ads, Facebook ads, Shopify automation, high-converting store, passive income, how to money online passively, best passive income in 2025" />
+  <meta name="description" content="Unlock explosive eCommerce growth with Freelankarx – the #1 Shopify Expert and Digital Marketing Strategist. I'm Olamilekan Muraina, and I’ve helped businesses generate over 5-7 figures in revenue with high-converting Shopify stores, powerful TikTok & Facebook ads, and automated email marketing. No fluff just proven strategies to scale your brand fast. Let’s build something amazing today!" />
+<meta name="keywords" content="Freelankarx, Shopify Expert, eCommerce Growth, Make Money Online 2025, Shopify Store Builder, Shopify for Beginners, Passive Income, TikTok Ads Expert, Facebook Ads Manager, Email Marketing Automation, Klaviyo Shopify, Dropshipping Masterclass, Shopify Sales Booster, High Converting Shopify Store, Online Business Coach, Digital Marketing Services, Scale Your Brand Online, Best Shopify Freelancer, Shopify Automation, Shopify Store Setup, Shopify Consultant, Shopify Ads Expert, Fiverr Shopify Expert, Upwork Shopify Specialist, Shopify SEO Expert, Shopify Expert, How To Make Money Online, How to make money online in 2025, How to start dropshipping in 2025, How to become rich quick in 2025, Best shopify specialist, Trusted dropshipping expert, best shopify expert, entrepreneur, Dropshipping, TikTok Ads, Facebook Ads, eCommerce Marketing, freelancer, Shopify Marketing Expert, professional digital marketer, best freelancer, best Shopify expert, best email . marketing expert, best fiverr freelancer, freelankarx, olamilekan Muraina, Muraina olamilekan, how to get sales, sales expert, dropshipping expert, ecommerce expert, Shopify sales expert, Shopify partner, klaviyo, making money online,scale brand, side hustle Expert, .Email Automation, Digital Marketing, Shopify expert, eCommerce, dropshipping, digital marketing, TikTok ads, Facebook ads, Shopify automation, high-converting store, passive income, how to money online passively, best passive income in 2025" />
 <meta name="robots" content="index, follow">
 <meta name="author" content="Olamilekan Muraina" />
-  <title>FreelankarX - Olamilekan Muraina</title>
+  <title>Freelankarx | Shopify Expert & Digital Marketing Strategist</title>
   <!-- Favicon -->  
   <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/freelankarx%20logo.png" type="image/png">
   <link rel="stylesheet" href="styles.css">
@@ -191,42 +191,42 @@
       </div>
     </section>
 
-    <!-- Pricing Section -->
-    <section id="pricing" class="section">
-      <h2>Pricing Plans</h2>
-      <div class="pricing-grid">
-        <div class="pricing-plan">
-          <h3>Basic</h3>
-          <p>$499</p>
-          <ul>
-            <li>Basic Shopify Setup</li>
-            <li>Standard Design</li>
-            <li>Email Support</li>
-          </ul>
-          <a href="#contact" class="btn">Get Started</a>
-        </div>
-        <div class="pricing-plan">
-          <h3>Standard</h3>
-          <p>$999</p>
-          <ul>
-            <li>Advanced Shopify Setup</li>
-            <li>Custom Design</li>
-            <li>Marketing Integration</li>
-          </ul>
-          <a href="#contact" class="btn">Get Started</a>
-        </div>
-        <div class="pricing-plan">
-          <h3>Premium</h3>
-          <p>$1999</p>
-          <ul>
-            <li>Complete Shopify & eCommerce Solution</li>
-            <li>Fully Custom Design</li>
-            <li>24/7 Support</li>
-          </ul>
-          <a href="#contact" class="btn">Get Started</a>
-        </div>
-      </div>
-    </section>
+   <!-- Pricing Section -->
+<section id="pricing" class="section">
+  <h2>Pricing Plans</h2>
+  <div class="pricing-grid">
+    <div class="pricing-plan">
+      <h3>Starter Path</h3>
+      <p>$300 - $600</p>
+      <ul>
+        <li>Launch with essential tools and foundational setup</li>
+        <li>Leverage organic marketing (TikTok & SEO)</li>
+        <li>Perfect for beginners exploring eCommerce</li>
+      </ul>
+      <a href="#contact" class="btn">Start with Confidence</a>
+    </div>
+    <div class="pricing-plan">
+      <h3>Builder Path</h3>
+      <p>$700 - $1200</p>
+      <ul>
+        <li>Custom branding + conversion-focused store design</li>
+        <li>Powerful tools for product research & marketing</li>
+        <li>Ideal for serious entrepreneurs scaling smart</li>
+      </ul>
+      <a href="#contact" class="btn">Let’s Build Your Empire</a>
+    </div>
+    <div class="pricing-plan">
+      <h3>Boss Path</h3>
+      <p>$2000 - $3900</p>
+      <ul>
+        <li>All-in-one: full strategy, paid ads, automation, team</li>
+        <li>Hands-free scaling with expert support</li>
+        <li>Built for full-time earners & eCom domination</li>
+      </ul>
+      <a href="#contact" class="btn">Go Full Boss Mode</a>
+    </div>
+  </div>
+</section>
 
     <!-- FAQ Section -->
     <section id="faq" class="section">
