--- a/index.html
+++ b/index.html
@@ -294,6 +294,39 @@
       </div>
     </section>
 
+    <!-- Add this section after the main content or wherever you'd like it to appear -->
+<section class="cta-section" style="text-align:center; padding: 2rem 0;">
+  <a href="free-site.html" class="cta-btn" style="background-color:#ff5722; color:white; padding: 1rem 2rem; font-size: 1.1rem; border-radius: 10px; text-decoration: none;">Get Your Free Website</a>
+</section>
+
+<style>
+  /* Mobile and Desktop responsive button */
+  .cta-section {
+    margin: 2rem 0;
+  }
+
+  .cta-btn {
+    background-color: #ff5722;
+    color: white;
+    padding: 1rem 2rem;
+    font-size: 1.1rem;
+    border-radius: 10px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+  }
+
+  .cta-btn:hover {
+    background-color: #e64a19;
+  }
+
+  @media (max-width: 600px) {
+    .cta-btn {
+      font-size: 1rem;
+      padding: 1rem 1.5rem;
+    }
+  }
+</style>
+
     <!-- Contact Section -->
     <section id="contact" class="section">
       <h2>Contact Me</h2>
