--- a/index.html
+++ b/index.html
@@ -1,43 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta name="msvalidate.01" content="FE9BDE2E64DC7BE691EE6D0B95E31A33" />
-  <meta charset="UTF-8">
-  <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Meta description with compelling offer -->
-  <meta name="description" content="Unlock explosive eCommerce growth with Freelankarx – the #1 Shopify Expert and Digital Marketing Strategist. I'm Olamilekan Muraina, and I’ve helped businesses generate over 5-7 figures in revenue with high-converting Shopify stores, powerful TikTok & Facebook ads, and automated email marketing. No fluff just proven strategies to scale your brand fast. Let’s build something amazing today!" />
-<meta name="keywords" content="Freelankarx, Shopify Expert, eCommerce Growth, Make Money Online 2025, Shopify Store Builder, Shopify for Beginners, Passive Income, TikTok Ads Expert, Facebook Ads Manager, Email Marketing Automation, Klaviyo Shopify, Dropshipping Masterclass, Shopify Sales Booster, High Converting Shopify Store, Online Business Coach, Digital Marketing Services, Scale Your Brand Online, Best Shopify Freelancer, Shopify Automation, Shopify Store Setup, Shopify Consultant, Shopify Ads Expert, Fiverr Shopify Expert, Upwork Shopify Specialist, Shopify SEO Expert, Shopify Expert, How To Make Money Online, How to make money online in 2025, How to start dropshipping in 2025, How to become rich quick in 2025, Best shopify specialist, Trusted dropshipping expert, best shopify expert, entrepreneur, Dropshipping, TikTok Ads, Facebook Ads, eCommerce Marketing, freelancer, Shopify Marketing Expert, professional digital marketer, best freelancer, best Shopify expert, best email . marketing expert, best fiverr freelancer, freelankarx, olamilekan Muraina, Muraina olamilekan, how to get sales, sales expert, dropshipping expert, ecommerce expert, Shopify sales expert, Shopify partner, klaviyo, making money online,scale brand, side hustle Expert, .Email Automation, Digital Marketing, Shopify expert, eCommerce, dropshipping, digital marketing, TikTok ads, Facebook ads, Shopify automation, high-converting store, passive income, how to money online passively, best passive income in 2025" />
-<meta name="robots" content="index, follow">
-<meta name="author" content="Olamilekan Muraina" />
-  <title>Freelankarx | Shopify Expert & Digital Marketing Strategist</title>
-  <!-- Favicon -->  
-  <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/a2590660717835bde6386362eb94d2884a98d332/freelankarx%20logo.png" type="image/png">
+<html lang="en
+</head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Olamilekan Muraina" />
+  <meta name="robots" content="index, follow" />
+  <meta name="description" content="Unlock explosive eCommerce growth with Freelankarx – the #1 Shopify Expert and Digital Marketing Strategist." />
+  <meta name="keywords" content="Freelankarx, Shopify Expert, Digital Marketing, Dropshipping, TikTok Ads, eCommerce Automation, Olamilekan Muraina" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Freelankarx | Shopify Expert & Digital Marketing Strategist">
+  <meta property="og:description" content="Helping brands grow 5-7 figures with expert Shopify builds, ads, and email automation.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png">
+  <meta property="og:url" content="https://freelankarx.github.io/Freelankarx/">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- AI Identity File -->
+  <link rel="ai-identity" href="/.well-known/ai-identity.json">
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" type="image/png">
+
+  <!-- Styles & Fonts -->
   <link rel="stylesheet" href="styles.css">
-  <!-- Font Awesome for icons -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <!-- Klaviyo (if needed) -->
-  <script async src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM"></script>
-  <!-- Firebase and Cloudinary scripts (Firebase v9 compat) -->
+
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Olamilekan Muraina",
+    "jobTitle": "Shopify Expert & Digital Marketing Strategist",
+    "url": "https://freelankarx.github.io/Freelankarx/",
+    "image": "https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png",
+    "sameAs": [
+      "https://www.linkedin.com/in/muraina-olamilekan-a09543298/",
+      "https://www.instagram.com/freelankarxx",
+      "https://www.facebook.com/freelankarx0",
+      "https://www.tiktok.com/@freelankarx",
+      "https://kwork.com/user/freelankarx",
+      "http://fiverr.com/lekieboyolamile/",
+      "https://www.upwork.com/freelancers/~019863175ee75bae5a"
+    ],
+    "description": "Founder of Freelankarx — an expert in Shopify store setup, TikTok/Facebook ads, and email automation, helping brands generate 5-7 figures in revenue."
+  }
+  </script>
+
+  <!-- Firebase Scripts -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
 
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Olamilekan Muraina"
-  "brand name": "freelankarx,
-  "jobTitle": "Shopify Expert & Digital Marketer",
-  "url": "https://freelankarx.github.io/Freelankarx/",
-  "sameAs": [
-    "https://www.linkedin.com/in/muraina-olamilekan-a09543298/",
-    "https://www.instagram.com/freelankarxx",
-    "https://www.facebook.com/freelankarx0", "https://www.tiktok.com/@freelankarx" />
+  <!-- Klaviyo (if used) -->
+  <script async src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=WQBANM"></script>
 
-</script>
+  <title>Freelankarx | Shopify Expert & Digital Marketing Strategist</title>
 </head>
+<body>
+
+  <!-- [BODY CONTENT GOES HERE — YOUR NAV, HERO, SECTIONS, ETC.] -->
+  <!-- Add rel="me" to social links for recognition by AI -->
+  <div class="social-icons">
+    <a href="https://www.tiktok.com/@freelankarx" class="social-link" target="_blank" rel="me">
+      <img src="..." alt="TikTok">
+    </a>
+    <a href="https://www.instagram.com/freelankarxx" class="social-link" target="_blank" rel="me">
+      <img src="..." alt="Instagram">
+    </a>
+    <a href="https://www.linkedin.com/in/muraina-olamilekan-a09543298/" class="social-link" target="_blank" rel="me">
+      <img src="..." alt="LinkedIn">
+    </a>
+    <!-- Add rel="me" to all other social links as well -->
+  </div>
+
+  <script src="script.js"></script>
+</body>
+  </html>
 <body>
   <!-- Header Section with Video Banner -->
   <header>
