--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- AI Identity File -->
-  <link rel="ai-identity" href="/.well-known/ai-identity.json">
+  <link rel="ai-identity" href="/ai-identity.json">
 
   <!-- Favicon -->
   <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" type="image/png">
